--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		      <tr>
 		        <td>
 		        	<div class="card">
-					  <img src="images/alex.jpeg" alt="Derrick" style="width:100%">
+					  <img src="alex.jpeg" alt="alex" style="width:100%">
 					  <h1>Alex Normon</h1>
 					  <p class="name">Partner, AngelList Canada</p>
 					  <div style="margin: 24px 0;">
@@ -103,7 +103,7 @@
 				</td>
 		        <td>
 		        	<div class="card">
-					  <img src="images/jeff.jpeg" alt="Inayat" style="width:100%">
+					  <img src="jeff.jpeg" alt="jeff" style="width:100%">
 					  <h1>Jeff Hoffman</h1>
 					  <p class="name">Investor, Philanthropist</p>
 					  <div style="margin: 24px 0;">
@@ -114,7 +114,7 @@
 
 				<td>
 		        	<div class="card">
-					  <img src="images/andre.jpeg" alt="Inayat" style="width:100%">
+					  <img src="andre.jpeg" alt="andre" style="width:100%">
 					  <h1>Andre Charoo</h1>
 					  <p class="name">GP, Maple VC</p>
 					  <div style="margin: 24px 0;">
@@ -125,7 +125,7 @@
 
 				<td>
 		        	<div class="card">
-					  <img src="images/geri.jpeg" alt="Inayat" style="width:100%">
+					  <img src="geri.jpeg" alt="geri" style="width:100%">
 					  <h1>Geri Kirilova</h1>
 					  <p class="name">MP, Laconia</p>
 					  <div style="margin: 24px 0;">
