--- a/option2.html
+++ b/option2.html
@@ -1,125 +1,64 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Aquila Capital</title>
+	<title>Aqulia Capital</title>
 	<!-- Add Fav Icon -->
 	<!-- Main purple color: #431984 --->
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="./css/styles.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Bootstrap 5 -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<body style="background: #f8ede5;">
-	<a href="./index.html">version1</a>
-	<a href="./option2.html">version2</a>
+<body>
 	<!-- Main header view -->
-	<div class="mainHeader margins">
-		<div class="header">
-			<img src="assets/aquilaEagle.png" height="100" width="100" style="margin-right: 30px"/>
-			  <h1 class="headerTitle">
-				AquilaCapital
-			  </h1>
-			  <!-- <p class="p-1" style="color: #531E97">
-				  Building Infrastructure For Early Stage Investing
-			  </p>  -->
-		</div>
-	
-		<div class="">
-			<div class="title firstTitle">
-				Early Stage Investing Made Easy
-			</div>
-			<div class="mRow" style="width: 500px">
-				<!-- <div class="titleSquare"></div> -->
-				<div class="title shortTitle">
-					I am...
-				</div>
-			</div>
-			<div class="titleLine"></div>
-			<div class="mRow" style="justify-content: center">
-				<div class="titleButton">an Investor</div>
-				<div class="titleButton">a Startup</div>
-			</div>
-		</div>
+	<div class="container-fluid p-5  text-white text-center" style="height: 650px; padding-top: 100px; background-color: #431984;">
+        <a href="./index.html">version1</a>
+        <a href="./option2.html">version2</a>
+        <h1 class="pt-5" style="font-size: 50pt; margin-top: 100px">
+  			Aqulia Capital
+  		</h1>
+  		<p class="p-1" style="font-size: 15pt; margin-top: 20px;">
+  			Building Infrastructure For Early Stage Investing
+  		</p> 
 	</div>
 
 	<div class="margins p-5">
-			<div class="titleBox">
-				<div class="mRow">
-					<!-- <div class="titleSquare"></div> -->
-					<div class="title">
-						Early Stage <span style="color:#431984; font-family: serif;">Investing</span>
-					</div>
-				</div>
-				<div class="titleLine"></div>
-			</div>
             <div class="mRow">
                 <div class="mColumn">
-					<div class="text">
-						The current economic climate makes the connection between startups and investors more crucial than ever. We strive to help help founders meet their next funders.
-					</div>
+                    <div class="title" style="font-family: sans-serif">
+                        The Problem
+                    </div>
                     <div class="text">
                         Investors will be critical to this next phase of startup innovation and growth. However, becoming an angel and more importantly a successful angel investor is more difficult now than ever before.
                         More text describing the issues with investing in current environment and how angel investors have a hard time finding startups or smth along these lines.
                     </div>
+                    <div class="text">- Lack of compelling deal flow</div>
+                    <div class="text">- High overhead of diligence on deals</div>
+                    <div class="text">- No community, mentors or guidance</div>
                 </div>
-                <div class="image">image goes here</div>
+                <div class="image"></div>
             </div>
-			<div class="mRow" style="margin-top: 20px; align-items: flex-start; justify-content: space-between;">
-				<div class="mrColumn investingCols">
-					<div class="mNumber">1.</div>
-					<div class="mText">Lack of compelling deal flow</div>
-				</div>
-				<div class="mrColumn investingCols">
-					<div class="mNumber">2.</div>
-                    <div class="mText">High overhead of diligence on deals</div>
-				</div>
-				<div class="mrColumn investingCols">
-					<div class="mNumber">3.</div>
-                    <div class="mText">No community, mentors or guidance</div>
-				</div>
-			</div>
-			<div class="titleBox">
-				<div class="mRow">
-					<!-- <div class="titleSquare"></div> -->
-					<div class="title">
-						Our <span style="color:#431984; font-family: serif;">Solution</span>
-					</div>
-				</div>
-				<div class="titleLine"></div>
-			</div>
             <div class="mRow">
-                <div class="image">image goes here</div>
+                <div class="image"></div>
                 <div class="mColumn">
+                    <div class="title" style="font-family: sans-serif">
+                        How do we solve this problem?
+                    </div>
                     <div class="text">Aquila Capital is  effectively building infrastructure to facilitate early-stage investments for angel investors. 
-                        We provide existing investors, as well aspiring angels, access to high volumes of pre-vetted deal flow and integration into an exclusive investor community. 
+                        We provide existing investors [as well aspiring angels] access to high volumes of pre-vetted deal flow + integration into an exclusive investor community. 
+                    </div>
+                    <div class="text">- Work with accelerators & incubators across North America and funnel their start-ups into our private start-up database.
+                    </div>
+                    <div class="text">- Facilitate warm intros between our angels and start-ups they want to invest in.</div>
+                    <div class="text">- Angels in our network also get access to events where world-class speakers [unicron-exit founder, GP at a Fund] will come to educate angels on investment thesis, how to do diligence, etc.
                     </div>
                 </div>
             </div>
-			<div class="mRow" style="margin-top: 20px; align-items: flex-start; justify-content: space-between;">
-				<div class="mrColumn investingCols">
-					<img src="assets/aquilaFunnel.png" height="200" width="200" />
-					<div class="mText">We funnel hundreds of startups into our extensive database each month through our partnerships with many accelerators and incubators accross North America.</div>
-				</div>
-				<div class="mrColumn investingCols">
-					<img src="assets/aquilaHandshake.png" height="200" width="200" />
-					<div class="mText">We facilitate warm intros between our angels and startups they want to invest in</div>
-				</div>
-				<div class="mrColumn investingCols">
-					<img src="assets/aquilaMicrophone.png" height="200" width="200" />
-					<div class="mText">We offer access to events where world-class speakers will come to educate angels on investment thesis, diligence, etc...</div>
-				</div>
-			</div>
-			<div class="titleBox">
-				<div class="mRow">
-					<!-- <div class="titleSquare"></div> -->
-					<div class="title">
-						Join the movement
-					</div>
-				</div>
-				<div class="titleLine"></div>
-			</div>
+            <div class="title p-5" style="margin-top: 50px; font-family: sans-serif" >
+                Join the movement
+            </div>
             <div class="mRow">
                 <div class="mColumn">
                     <div class="mNumber">15+</div>
@@ -138,19 +77,16 @@
                     <div class="mText">speakers</div>
                 </div>
             </div>
-			<div class="titleBox">
-				<div class="mRow">
-					<div class="title">
-						Our Speakers
-					</div>
-				</div>
-				<div class="titleLine"></div>
-			</div>
         </div>
 
 
 	<!-- Angel Speakers section -->
 	<div class="container-fluid p-5" style="margin-top: 30px">
+		<h2 style="padding-left: 100px; color: #431984;">
+			Some of our booked angels confirmed to speak
+		</h2>
+
+
 		<div class="container mt-5">
          
 		  <table class="table table-borderless">
@@ -159,7 +95,7 @@
 		      <tr>
 		        <td>
 		        	<div class="card">
-					  <img src="assets/alex.jpeg" alt="Derrick" style="width:100%">
+					  <img src="./assets/alex.jpeg" alt="alex" style="width:100%">
 					  <h1>Alex Normon</h1>
 					  <p class="name">Partner, AngelList Canada</p>
 					  <div style="margin: 24px 0;">
@@ -168,7 +104,7 @@
 				</td>
 		        <td>
 		        	<div class="card">
-					  <img src="assets/jeff.jpeg" alt="Inayat" style="width:100%">
+					  <img src="./assets/jeff.jpeg" alt="jeff" style="width:100%">
 					  <h1>Jeff Hoffman</h1>
 					  <p class="name">Investor, Philanthropist</p>
 					  <div style="margin: 24px 0;">
@@ -179,7 +115,7 @@
 
 				<td>
 		        	<div class="card">
-					  <img src="assets/andre.jpeg" alt="Inayat" style="width:100%">
+					  <img src="./assets/andre.jpeg" alt="andre" style="width:100%">
 					  <h1>Andre Charoo</h1>
 					  <p class="name">GP, Maple VC</p>
 					  <div style="margin: 24px 0;">
@@ -190,7 +126,7 @@
 
 				<td>
 		        	<div class="card">
-					  <img src="assets/geri.jpeg" alt="Inayat" style="width:100%">
+					  <img src="./assets/geri.jpeg" alt="geri" style="width:100%">
 					  <h1>Geri Kirilova</h1>
 					  <p class="name">MP, Laconia</p>
 					  <div style="margin: 24px 0;">
@@ -199,8 +135,6 @@
 
 				</td>
 		      </tr>
-		      
-
 		    </tbody>
 		  </table>
 		</div>
@@ -266,7 +200,7 @@
 	          <h6 class="text-uppercase fw-bold mb-4" style="color: #431984"><b>
 	          	<a href="#">
 	          		<!--<img class="img-fluid" src="logo.png" style="height: 50px">--> <!-- ADD COMPANY LOGO HERE -->
-	          		<h6 class="text-uppercase fw-bold mb-4" style="color: #431984">Aquila Capital</h6>
+	          		<h6 class="text-uppercase fw-bold mb-4" style="color: #431984">Aqulia Capital</h6>
 	          	</a></a></b>
 	          </h6>
 	          <p>Building Infrastructure For <br> Early Stage Investing</p>
@@ -295,7 +229,7 @@
 	      </div>
 	    </div>
 	  </section>
-	  <div class="text-center p-5">© 2023 Aquila Capital. All rights reserved.</div>
+	  <div class="text-center p-5">© 2023 Aqulia Capital. All rights reserved.</div>
 	</footer>
 
 
