--- a/index.html
+++ b/index.html
@@ -1,189 +1,157 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Aqulia Capital</title>
+	<title>InfraCapital</title>
 	<!-- Add Fav Icon -->
 	<!-- Main purple color: #431984 --->
-	<link rel="stylesheet" href="/css/styles.css">
+	<link rel="stylesheet" href="./css/styles.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Aqulia Capital is building infrastructure for early stage investing"> <!-- Google Search Description -->
 	<!-- Bootstrap 5 -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-	<style>
-		.bd-placeholder-img {
-	        font-size: 1.125rem;
-	        text-anchor: middle;
-	        -webkit-user-select: none;
-	        -moz-user-select: none;
-	        user-select: none;
-	      }
-		@media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-
-      .b-example-divider {
-        height: 3rem;
-        background-color: rgba(0, 0, 0, .1);
-        border: solid rgba(0, 0, 0, .15);
-        border-width: 1px 0;
-        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-      }
-
-      .b-example-vr {
-        flex-shrink: 0;
-        width: 1.5rem;
-        height: 100vh;
-      }
-
-      .bi {
-        vertical-align: -.125em;
-        fill: currentColor;
-      }
-
-      .nav-scroller {
-        position: relative;
-        z-index: 2;
-        height: 2.75rem;
-        overflow-y: hidden;
-      }
-
-      .nav-scroller .nav {
-        display: flex;
-        flex-wrap: nowrap;
-        padding-bottom: 1rem;
-        margin-top: -1px;
-        overflow-x: auto;
-        text-align: center;
-        white-space: nowrap;
-        -webkit-overflow-scrolling: touch;
-      }
-	</style>
 </head>
 <body>
 
 <main>
 	<!-- Main header view -->
-	<div class="container-fluid p-5  text-white text-center" style="height: 650px; padding-top: 100px; background-color: #431984;">
-  		<h1 class="pt-5" style="font-size: 50pt; margin-top: 100px">
-  			Aqulia Capital
+	<div class="header">
+  		<h1 class="logoTitle">
+  			NameCapital
   		</h1>
-  		<p class="p-1 pb-5" style="font-size: 15pt; margin-top: 20px;">
+  		<p class="headerTitle">
   			Building Infrastructure For Early Stage Investing
   		</p> 
-  		<p><a class="btn btn-lg btn-primary" href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank">Apply now</a></p>
+  		<!-- <p><a class="btn btn-lg btn-primary" href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank" style="background: #5800FF">Apply now</a></p> -->
+      <div class="flexRow">
+        <a href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank" class="callButton">Apply Now</a>
+        <!-- <a href="#firstBox" class="callButton2">More Information</a> -->
+      </div>
 	</div>
 
-<div class="container marketing">
-
-    
-    <div class="row featurette mt-5">
-      <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1">The Problem</h2>
-        <p class="lead">Investors will be critical to this next phase of startup innovation and growth. However, becoming an angel and more importantly a successful angel investor is more difficult now than ever before. More text describing the issues with investing in current environment and how angel investors have a hard time finding startups or smth along these lines.</p>
-	        <p class="lead">- Lack of compelling deal flow</p>
-	        <p class="lead">- High overhead of diligence on deals</p>
-	        <p class="lead mr-3">- No community, mentors or guidance</p>
-      </div>
-      <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-      </div>
+  <div class="flexRow spaceBetween margins">
+    <div class="flexColumn numCol">
+        <div class="num">20<span class="num" style="font-size: 80px">+</span></div>
+        <div class="numText">accelerators</div>
     </div>
-
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading fw-normal lh-1">How do we solve this problem?</span></h2>
-        <p class="lead">Aquila Capital is effectively building infrastructure to facilitate early-stage investments for angel investors. We provide existing investors [as well aspiring angels] access to high volumes of pre-vetted deal flow + integration into an exclusive investor community. </p>
-        <p class="lead">- Work with accelerators & incubators across North America and funnel their start-ups into our private start-up database. </p>
-        <p class="lead">- Facilitate warm intros between our angels and start-ups they want to invest in.</p>
-        <p class="lead">- Angels in our network also get access to events where world-class speakers [unicron-exit founder, GP at a Fund] will come to educate angels on investment thesis, how to do diligence, etc. </p>
-      </div>
-      <div class="col-md-5 order-md-1">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-      </div>
+    <div class="flexColumn numCol">
+      <div class="num">400<span class="num" style="font-size: 80px">+</span></div>
+      <div class="numText">companies</div>
     </div>
+    <div class="flexColumn numCol">
+        <div class="num">17<span class="num" style="font-size: 80px"></span></div>
+        <div class="numText">angels</div>
+    </div>
+    <div class="flexColumn numCol">
+        <div class="num">5<span class="num" style="font-size: 80px"></span></div>
+        <div class="numText">speakers</div>
+     </div>
+  </div>
 
-
-	<hr class="featurette-divider">
-	<h2 class="featurette-heading fw-normal lh-1">Join the movement </span></h2>
-
-	<div class="mRow">
-        <div class="mColumn">
-            <div class="mNumber">15+</div>
-            <div class="mText">accelerators</div>
+  <div class="blackBox overBox">
+    <div class="flexRow spaceBetween textCol">
+      <div class="flexColumn">
+        <div class="blueTitle">
+          The Problem
         </div>
-        <div class="mColumn">
-        	<div class="mNumber">400+</div>
-        	<div class="mText">companies</div>
+        <div class="whiteText">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
+      </div>
+      <div class="flexColumn">
+        <div class="imgPlaceholder">
+          <img class="landscapeImg" src="./assets/landscape2.jpeg" 1>
         </div>
-        <div class="mColumn">
-            <div class="mNumber">12</div>
-            <div class="mText">angels</div>
+      </div>
+    </div>
+    <div class="flexRow spaceBetween textCol" style="margin-top: 70px">
+      <div class="flexColumn third">
+        <img height="50" width="50" src="./assets/stop.png" />
+        <div class="whiteText">Lack of compelling deal flow</div>
+      </div>
+      <div class="flexColumn third">
+        <img height="50" width="50" src="./assets/money.png" />
+        <div class="whiteText">High overhead of diligence on deals</div>
+      </div>
+      <div class="flexColumn third">
+        <img height="50" width="50" src="./assets/noChat.png" />
+        <div class="whiteText">No community, mentors or guidance</div>
+      </div>
+    </div>
+  </div>
+
+  <div class="greyBox underBox">
+    <div class="flexRow spaceBetween textCol" style="margin-top: 70px; margin-bottom: 50px;">
+      <div class="flexColumn third">
+        <img height="50" width="50" src="./assets/database.png" />
+        <div class="whiteText">Unlimited access to our database of hundreds of startups</div>
+      </div>
+      <div class="flexColumn third">
+        <img height="50" width="50" src="./assets/fireplace.png" />
+        <div class="whiteText">Get warm intros with the best founders in North America</div>
+      </div>
+      <div class="flexColumn third">
+        <img height="50" width="50" src="./assets/world.png" />
+        <div class="whiteText">Events with world-class speakers and experts</div>
+      </div>
+    </div>
+    <div class="flexRow spaceBetween textCol">
+      <div class="flexColumn">
+        <div class="imgPlaceholder bottomImg">
+          <img class="landscapeImg" src="./assets/landscape1.jpeg" 1>
         </div>
-        <div class="mColumn">
-            <div class="mNumber">5</div>
-            <div class="mText">speakers</div>
-         </div>
+      </div>
+      <div class="flexColumn sidePadding">
+        <div class="blueTitle">
+          Our Solution
+        </div>
+        <div class="whiteText" style="margin-bottom: 50px">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</div>
+      </div>
     </div>
-        
+  </div>
 
-
-    <hr class="featurette-divider">
-
-    <div class="row">
-    	<h2 class="featurette-heading fw-normal lh-1">Some of our booked cohort speakers confirmed</h2>
-      <div class="col-lg-3 mt-5">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Alex Normon</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-        <h2 class="fw-normal">Alex Normon</h2>
-        <p>Partner, AngelList Canada</p>
-        <p><a class="btn btn-secondary" href="https://www.linkedin.com/in/alexanderlnorman/" target="_blank">View details &raquo;</a></p>
-      </div>
-      <div class="col-lg-3 mt-5">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Jeff Hoffman</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-        <h2 class="fw-normal">Jeff Hoffman</h2>
-        <p>Investor, Philanthropist</p>
-        <p><a class="btn btn-secondary" href="https://www.linkedin.com/in/jeffhoff/" target="_blank">View details &raquo;</a></p>
-      </div>
-      <div class="col-lg-3 mt-5">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Andre Charoo</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-        <h2 class="fw-normal">Andre Charoo</h2>
-        <p>GP, Maple VC | Venture Partner, Inovia</p>
-        <p><a class="btn btn-secondary" href="https://www.linkedin.com/in/acharoo/" target="_blank">View details &raquo;</a></p>
-      </div>
-      <div class="col-lg-3 mt-5">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Geri Kirilova</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-        <h2 class="fw-normal">Geri Kirilova</h2>
-        <p>MP, Laconia</p>
-        <p><a class="btn btn-secondary" href="https://www.linkedin.com/in/gerikirilova/" target="_blank">View details &raquo;</a></p>
-      </div>
-
-
+  <div class="whiteBox">
+    <div class="blueTitle">
+      Our Speakers
     </div>
+    <div class="flexRow flexCenter flexWrap"">
+      <div class="flexColumn flexCenter speakerBox">
+        <div class="speakerImg"><img class="croppedImg" src="./assets/alex.jpeg" /></div>
+        <div class="blackTitle">Alex Normon</div>
+        <div class="greyText">N49P Partner, AngelList Canada</div>
+        <a href="https://www.linkedin.com/in/alexanderlnorman/" target="_blank" class="callButton">About</a>
+      </div>
+      <div class="flexColumn flexCenter speakerBox">
+        <div class="speakerImg"><img class="croppedImg" src="./assets/jeff.jpeg" /></div>
+        <div class="blackTitle">Jeff Hoffman</div>
+        <div class="greyText">Investor, Philanthropist</div>
+        <a href="https://www.linkedin.com/in/jeffhoff/" target="_blank" class="callButton">About</a>
+      </div>
+      <div class="flexColumn flexCenter speakerBox">
+        <div class="speakerImg"><img class="croppedImg" src="./assets/andre.jpeg" /></div>
+        <div class="blackTitle">Andre Charoo</div>
+        <div class="greyText">Maple GP & Inovia Venture Partner</div>
+        <a href="https://www.linkedin.com/in/acharoo/" target="_blank" class="callButton">About</a>
+      </div>
+      <div class="flexColumn flexCenter speakerBox">
+        <div class="speakerImg"><img class="croppedImg" src="./assets/geri.jpeg" /></div>
+        <div class="blackTitle">Geri Kirilova</div>
+        <div class="greyText">Laconia MP</div>
+        <a href="https://www.linkedin.com/in/acharoo/" target="_blank" class="callButton">About</a>
+      </div>
+      <div class="flexColumn flexCenter speakerBox">
+        <div class="speakerImg"><img class="croppedImg" src="./assets/frederik.jpeg" /></div>
+        <div class="blackTitle">Frederik Groce</div>
+        <div class="greyText">Wellington VC & BLCK VC Co-founder</div>
+        <a href="https://www.linkedin.com/in/frederikgroce/" target="_blank" class="callButton">About</a>
+      </div>
+    </div>
+  </div>
+  </div>
 
-
-    <hr class="featurette-divider mt-5">
-
-
-</div>
-
-
-  <!-- FOOTER -->
-  <footer class="container">
-    <p>&copy; 2023 Aquila Capital. &middot;
-    	<a href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank">Apply for cohort</a> &middot; 
-    	<a href="#">Contact Us</a></p>
-  </footer>
+  <div class="flexRow spaceBetween footer">
+    <div>&copy; 2023 Aquila Capital.</div>
+    <div><a class="footerLink" href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank">Apply for cohort</a></div>
+  </div>
 </main>
-
-
-
-
-
-
 </body>
 </html>
