--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>InfraCapital</title>
 	<!-- Add Fav Icon -->
 	<!-- Main purple color: #431984 --->
-	<link rel="stylesheet" href="./css/styles.css">
+	<link rel="stylesheet" href="css/styles.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Aqulia Capital is building infrastructure for early stage investing"> <!-- Google Search Description -->
