--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <div class="blueTitle">
       Our Speakers
     </div>
-    <div class="flexRow flexCenter flexWrap"">
+    <div class="flexRow flexCenter flexWrap">
       <div class="flexColumn flexCenter speakerBox">
         <div class="speakerImg"><img class="croppedImg" src="./assets/alex.jpeg" /></div>
         <div class="blackTitle">Alex Normon</div>
@@ -146,6 +146,44 @@
       </div>
     </div>
   </div>
+
+  <div class="whiteBox" style="margin: 0">
+    <div class="blueTitle">
+      Accelerators
+    </div>
+    <div class="flexRow flexCenter flexWrap">
+      <div class="flexColumn">
+        <a href="https://fintechcadence.com" target="_blank" class="imageLink"><img class="accImg" src="./assets/acceleratorLogo/fintechCadence.png" /></a>
+      </div>
+      <div class="flexColumn">
+        <a href="https://www.nextcanada.com/next-36/" target="_blank" class="imageLink"><img class="accImg" src="./assets/acceleratorLogo/next36.png" /></a>
+      </div>
+      <div class="flexColumn">
+        <a href="https://www.nextcanada.com/next-ai/" target="_blank" class="imageLink"><img class="accImg" src="./assets/acceleratorLogo/nextai.png" /></a>
+      </div>
+      <div class="flexColumn">
+        <a href="https://www.nextcanada.com/next-founders/" target="_blank" class="imageLink"><img class="accImg" src="./assets/acceleratorLogo/nextFounders.png" /></a>
+      </div>
+      <div class="flexColumn">
+        <a href="https://www.antler.co" target="_blank" class="imageLink"><img class="accImg" src="./assets/acceleratorLogo/antler.svg" /></a>
+      </div>
+      <div class="flexColumn">
+        <a href="https://creativedestructionlab.com" target="_blank" class="imageLink"><img class="accImg" src="./assets/acceleratorLogo/cdl.png" /></a>
+      </div>
+      <div class="flexColumn">
+        <a href="https://ams.uottawa.ca/accelerator-laboratory-homepage/" target="_blank" class="imageLink"><img class="accImg" src="./assets/acceleratorLogo/ottawa.png" /></a>
+      </div>
+      <div class="flexColumn">
+        <a href="https://www.jumboventures.org" target="_blank" class="imageLink"><img class="accImg" src="./assets/acceleratorLogo/jumboVenture.png" /></a>
+      </div>
+      <div class="flexColumn">
+        <a href="https://www.bearcatventures.org" target="_blank" class="imageLink"><img class="accImg" src="./assets/acceleratorLogo/bearCat.png" /></a>
+      </div>
+      <div class="flexColumn">
+        <a href="https://www.sky-ventures.com" target="_blank" class="imageLink"><img class="accImg" src="./assets/acceleratorLogo/skyVentures.png" /></a>
+      </div>
+    </div>
+    <div class="smallTitle">...and many more to come</div>
   </div>
 
   <div class="flexRow spaceBetween footer">
