final responsiveness and favicon

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="index.js" defer></script>
+  <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
 </head>
 <body>
 
@@ -26,7 +27,7 @@
 	</div>
   <div class="mainPage">
     <div class="secondHeader">
-      <a href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank" class="callButton centerButton">Sign up today</a>
+      <a href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank" class="callButton centerButton">Apply to be an angel</a>
     </div>
 
     <div class="ecosystem">
@@ -53,15 +54,15 @@
       </div>
     </div>
 
-    <div class="wrapGrid">
-      <div class="blackBox animationCard" style="margin-bottom: 5px;">
+    <div class="wrapGrid pageMargins">
+      <div class="blackBox animationCard">
         <div class="flexRow spaceBetween textCol">
           <div class="flexColumn">
             <div class="blueTitle">
               Easy access
             </div>
             <div class="whiteText">We provide a centralized and easily accessible platform for you to discover and research promising early-stage companies. By using our database, angel investors can quickly filter and search through a large pool of startups, helping them to identify the best investment opportunities based on their criteria. Join our community today and access an ecosystem of hundreds of startups backed by the best accelerators and incubators across the world.</div>
-            <a href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank" class="callButton buttonMargin">Sign up today</a>
+            <a href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank" class="callButton buttonMargin">Apply to be an angel</a>
           </div>
           <div class="flexColumn">
             <!-- <div class="imgPlaceholder">
@@ -95,7 +96,7 @@
         <img height="50" width="50" src="./assets/verified.png" />
         <div class="whiteText">Events with world-class speakers and experts</div>
       </div>
-      <div class="blackBox animationCard flexRow spaceBetween textCol" style="margin-top: 5px;">
+      <div class="blackBox animationCard flexRow spaceBetween textCol">
         <div class="flexColumn">
           <!-- <div class="imgPlaceholder">
             <img class="landscapeImg" src="./assets/landscape1.jpeg" 1>
@@ -105,13 +106,13 @@
           <div class="blueTitle">
             Our Community
           </div>
-          <div class="whiteText" style="margin-bottom: 50px">Invest among a community of the best angels and mentors in North America. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-          <a href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank" class="callButton">Sign up today</a>
+          <div class="whiteText">Invest among a community of the best angels and mentors in North America. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+          <a href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank" class="callButton buttonMargin">Apply to be an angel</a>
         </div>
       </div>
     </div>
 
-    <div class="wrapList">
+    <div class="wrapList pageMargins">
       <div>
         <div class="blueTitle">
           No sleep for founders
@@ -128,35 +129,35 @@
             <div class="speakerImg"><img class="croppedImg" src="./assets/alex.jpeg" /></div>
             <div class="blackTitle">Alex Normon</div>
             <div class="greyText">N49P Partner, AngelList Canada</div>
-            <a href="https://www.linkedin.com/in/alexanderlnorman/" target="_blank" class="callButton">About</a>
+            <a href="https://www.linkedin.com/in/alexanderlnorman/" target="_blank" class="callButton shortButton">About</a>
           </div>
           <div class="flexColumn flexCenter speakerBox">
             <div class="speakerImg"><img class="croppedImg" src="./assets/jeff.jpeg" /></div>
             <div class="blackTitle">Jeff Hoffman</div>
             <div class="greyText">Investor, Philanthropist</div>
-            <a href="https://www.linkedin.com/in/jeffhoff/" target="_blank" class="callButton">About</a>
+            <a href="https://www.linkedin.com/in/jeffhoff/" target="_blank" class="callButton shortButton">About</a>
           </div>
           <div class="flexColumn flexCenter speakerBox">
             <div class="speakerImg"><img class="croppedImg" src="./assets/andre.jpeg" /></div>
             <div class="blackTitle">Andre Charoo</div>
             <div class="greyText">Maple GP & Inovia Venture Partner</div>
-            <a href="https://www.linkedin.com/in/acharoo/" target="_blank" class="callButton">About</a>
+            <a href="https://www.linkedin.com/in/acharoo/" target="_blank" class="callButton shortButton">About</a>
           </div>
           <div class="flexColumn flexCenter speakerBox">
             <div class="speakerImg"><img class="croppedImg" src="./assets/geri.jpeg" /></div>
             <div class="blackTitle">Geri Kirilova</div>
             <div class="greyText">Laconia MP</div>
-            <a href="https://www.linkedin.com/in/acharoo/" target="_blank" class="callButton">About</a>
+            <a href="https://www.linkedin.com/in/acharoo/" target="_blank" class="callButton shortButton">About</a>
           </div>
           <div class="flexColumn flexCenter speakerBox">
             <div class="speakerImg"><img class="croppedImg" src="./assets/frederik.jpeg" /></div>
             <div class="blackTitle">Frederik Groce</div>
             <div class="greyText">Wellington VC & BLCK VC Co-founder</div>
-            <a href="https://www.linkedin.com/in/frederikgroce/" target="_blank" class="callButton">About</a>
+            <a href="https://www.linkedin.com/in/frederikgroce/" target="_blank" class="callButton shortButton">About</a>
           </div>
         </div>
       </div>
-      <div class="" style="margin: 0">
+      <div class="">
         <div class="blueTitle">
           Accelerators
         </div>
@@ -219,7 +220,7 @@
 
   <div class="flexRow spaceBetween footer">
     <div>&copy; 2023 Aquila Capital.</div>
-    <div><a class="footerLink" href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank">Apply for cohort</a></div>
+    <div><a class="footerLink" href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank">Apply to be an angel</a></div>
   </div>
 </main>
 </body>
