test to fix images on host

--- a/index.html
+++ b/index.html
@@ -163,52 +163,52 @@
         </div>
         <div class="flexRow flexCenter flexWrap">
           <div class="flexColumn partnerLogo">
-            <a href="https://fintechcadence.com" target="_blank" class="imageLink"><img class="accImg" src="./assets/acceleratorLogo/fintechCadence.png" /></a>
+            <a href="https://fintechcadence.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/fintechCadence.png" /></a>
           </div>
           <div class="flexColumn partnerLogo">
-            <a href="https://www.nextcanada.com/next-36/" target="_blank" class="imageLink"><img class="accImg" src="./assets/acceleratorLogo/next36.png" /></a>
+            <a href="https://www.nextcanada.com/next-36/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/next36.png" /></a>
           </div>
           <div class="flexColumn partnerLogo">
-            <a href="https://www.nextcanada.com/next-ai/" target="_blank" class="imageLink"><img class="accImg" src="./assets/acceleratorLogo/nextai.png" /></a>
+            <a href="https://www.nextcanada.com/next-ai/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/nextai.png" /></a>
           </div>
           <div class="flexColumn partnerLogo">
-            <a href="https://www.nextcanada.com/next-founders/" target="_blank" class="imageLink"><img class="accImg" src="./assets/acceleratorLogo/nextfounders.png" /></a>
+            <a href="https://www.nextcanada.com/next-founders/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/nextfounders.png" /></a>
           </div>
           <div class="flexColumn partnerLogo">
-            <a href="https://www.antler.co" target="_blank" class="imageLink"><img class="accImg" src="./assets/acceleratorLogo/antler.png" /></a>
+            <a href="https://www.antler.co" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/antler.png" /></a>
           </div>
           <div class="flexColumn partnerLogo">
-            <a href="https://creativedestructionlab.com" target="_blank" class="imageLink"><img class="accImg" src="./assets/acceleratorLogo/cdl.png" /></a>
+            <a href="https://creativedestructionlab.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/cdl.png" /></a>
           </div>
           <div class="flexColumn partnerLogo">
-            <a href="https://ams.uottawa.ca/accelerator-laboratory-homepage/" target="_blank" class="imageLink"><img class="accImg" src="./assets/acceleratorLogo/lalonde.png" /></a>
+            <a href="https://ams.uottawa.ca/accelerator-laboratory-homepage/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/lalonde.png" /></a>
           </div>
           <div class="flexColumn partnerLogo">
-            <a href="https://www.jumboventures.org" target="_blank" class="imageLink"><img class="accImg" src="./assets/acceleratorLogo/jumbo.png" /></a>
+            <a href="https://www.jumboventures.org" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/jumbo.png" /></a>
           </div>
           <div class="flexColumn partnerLogo">
-            <a href="https://www.bearcatventures.org" target="_blank" class="imageLink"><img class="accImg" src="./assets/acceleratorLogo/bearcat.png" /></a>
+            <a href="https://www.bearcatventures.org" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/bearcat.png" /></a>
           </div>
           <div class="flexColumn partnerLogo">
-            <a href="https://www.sky-ventures.com" target="_blank" class="imageLink"><img class="accImg" src="./assets/acceleratorLogo/skyventures.png" /></a>
+            <a href="https://www.sky-ventures.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/skyventures.png" /></a>
           </div>
           <div class="flexColumn partnerLogo">
-            <a href="https://www.northeastern.edu/idea/" target="_blank" class="imageLink"><img class="accImg" src="./assets/acceleratorLogo/qidea.png" /></a>
+            <a href="https://www.northeastern.edu/idea/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/qidea.png" /></a>
           </div>
           <div class="flexColumn partnerLogo">
-            <a href="https://cpsse.psu.edu/club/happy-valley-vc" target="_blank" class="imageLink"><img class="accImg" src="./assets/acceleratorLogo/pennstate.png" /></a>
+            <a href="https://cpsse.psu.edu/club/happy-valley-vc" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/pennstate.png" /></a>
           </div>
           <div class="flexColumn partnerLogo">
-            <a href="https://www.linkedin.com/company/venture-capital-club-oklahoma/" target="_blank" class="imageLink"><img class="accImg" src="./assets/acceleratorLogo/vcc.png" /></a>
+            <a href="https://www.linkedin.com/company/venture-capital-club-oklahoma/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/vcc.png" /></a>
           </div>
           <div class="flexColumn partnerLogo">
-            <a href="https://www.gatorventurecapital.org" target="_blank" class="imageLink"><img class="accImg" src="./assets/acceleratorLogo/gator.png" /></a>
+            <a href="https://www.gatorventurecapital.org" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/gator.png" /></a>
           </div>
           <div class="flexColumn partnerLogo">
-            <a href="https://www.collegeventuresnetwork.com" target="_blank" class="imageLink"><img class="accImg" src="./assets/acceleratorLogo/cnv.png" /></a>
+            <a href="https://www.collegeventuresnetwork.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/cnv.png" /></a>
           </div>
           <div class="flexColumn partnerLogo">
-            <a href="https://holtxchange.com" target="_blank" class="imageLink"><img class="accImg" src="./assets/acceleratorLogo/xchange.png" /></a>
+            <a href="https://holtxchange.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/xchange.png" /></a>
           </div>
 
 
