--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<div class="header">
       <a href="https://andrewciotto.github.io" target="_blank"><img class="logoTitle" src="./assets/logoText-white.png" /></a>
   		<p class="headerTitle">
-  			Invest in the ideas and founders of tomorrow
+  			Invest in the builders of tomorrow
   		</p> 
   		<!-- <p><a class="btn btn-lg btn-primary" href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank" style="background: #5800FF">Apply now</a></p> -->
 	</div>
@@ -44,7 +44,7 @@
           <div class="numText">companies</div>
         </div>
         <div class="flexColumn numCol">
-          <div class="num">17<span class="num" style="font-size: 80px"></span></div>
+          <div class="num">20<span class="num" style="font-size: 80px">+</span></div>
           <div class="numText">angels</div>
         </div>
         <div class="flexColumn numCol">
