--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	</div>
   <div class="mainPage">
     <div class="secondHeader">
-      <a href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank" class="callButton centerButton">Apply to be an angel</a>
+      <a href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank" class="callButton centerButton">SIGN UP</a>
     </div>
 
     <div class="ecosystem">
