--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <main>
 	<!-- Main header view -->
 	<div class="header">
-      <a href="https://andrewciotto.github.io" target="_blank"><img class="logoTitle" src="./assets/logoText-white.png" /></a>
+      <a href="https://andrewciotto.github.io"><img class="logoTitle" src="./assets/logoText-white.png" /></a>
   		<p class="headerTitle">
   			Invest in the builders of tomorrow
   		</p> 
@@ -32,7 +32,7 @@
 
     <div class="ecosystem">
       <div class="whiteTitle">
-        Our Ecosystem
+        Our Network
       </div>
       <div class="flexRow spaceBetween column800">
         <div class="flexColumn numCol">
@@ -55,23 +55,21 @@
     </div>
 
     <div class="wrapGrid pageMargins">
-      <div class="blackBox animationCard">
-        <div class="flexRow spaceBetween textCol">
-          <div class="flexColumn">
-            <div class="blueTitle">
-              Easy access
-            </div>
-            <div class="whiteText">We provide a centralized and easily accessible platform for you to discover and research promising early-stage companies. By using our database, angel investors can quickly filter and search through a large pool of startups, helping them to identify the best investment opportunities based on their criteria. Join our community today and access an ecosystem of hundreds of startups backed by the best accelerators and incubators across the world.</div>
-            <a href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank" class="callButton buttonMargin">Apply to be an angel</a>
+      <div class="emptySpace"></div>
+      <div class="flexRow spaceBetween textCol">  <!--  class="blackBox animationCard" -->
+        <div class="flexColumn">
+          <div class="blueTitle">
+            Access the Future
           </div>
-          <div class="flexColumn">
-            <!-- <div class="imgPlaceholder">
-              <img class="landscapeImg" src="./assets/landscape2.jpeg" 1>
-            </div> -->
-          </div>
+          <div class="whiteText">We provide a centralized and easily accessible platform for you to discover and research promising early-stage companies. By using our database, angel investors can quickly filter and search through a large pool of startups, helping them to identify the best investment opportunities based on their criteria. Join our community today and access an ecosystem of hundreds of startups backed by the best accelerators and incubators across the world.</div>
+        </div>
+        <div class="flexColumn">
+          <!-- <div class="imgPlaceholder">
+            <img class="landscapeImg" src="./assets/blueRocketLaunch.png" />
+          </div> -->
         </div>
       </div>
-  
+      <!-- <div class="emptySpace"></div> -->
       <div class="flexColumn third animationCard">
         <img height="50" width="50" src="./assets/world.png" />
         <div class="whiteText">Discover hundreds of startups accross the world</div>
@@ -83,6 +81,23 @@
       <div class="flexColumn third animationCard">
         <img height="50" width="50" src="./assets/database.png" />
         <div class="whiteText">Unlimited access to our extensive database</div>
+      </div>
+      <a href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank" class="callButton buttonMargin">JOIN NOW</a>
+
+      <div class="emptySpace"></div>
+      <div class="flexRow spaceBetween textCol"> <!-- blackBox animationCard -->
+        <div class="flexColumn">
+          <!-- <div class="imgPlaceholder">
+            <img class="landscapeImg" src="./assets/landscape1.jpeg" 1>
+          </div> -->
+        </div>
+        <div class="flexColumn">
+          <div class="blueTitle">
+            Discover a Thriving Community
+          </div>
+          <div class="whiteText">Invest among a community of the best angels and mentors in North America. We strive to foster connections between founders and investors to develop the startups of tomorrow. We also offer speaker events that can help you make informed investment decisions and find the right startups for you. 
+          </div>
+        </div>
       </div>
       <div class="flexColumn third animationCard">
         <img height="50" width="50" src="./assets/group.png" />
@@ -96,30 +111,20 @@
         <img height="50" width="50" src="./assets/verified.png" />
         <div class="whiteText">Events with world-class speakers and experts</div>
       </div>
-      <div class="blackBox animationCard flexRow spaceBetween textCol">
-        <div class="flexColumn">
-          <!-- <div class="imgPlaceholder">
-            <img class="landscapeImg" src="./assets/landscape1.jpeg" 1>
-          </div> -->
-        </div>
-        <div class="flexColumn">
-          <div class="blueTitle">
-            Our Community
-          </div>
-          <div class="whiteText">Invest among a community of the best angels and mentors in North America. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-          <a href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank" class="callButton buttonMargin">Apply to be an angel</a>
-        </div>
-      </div>
+      <a href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank" class="callButton buttonMargin">JOIN NOW</a>
+
     </div>
 
+    <div class="emptySpace"></div>
     <div class="wrapList pageMargins">
       <div>
         <div class="blueTitle">
-          No sleep for founders
+          No Sleep for Founders
         </div>
-        <div class="whiteText">The economy may be slowing but innovation isn't: studies show that nearly half of all fortune500 companies were founded during recessions. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+        <div class="whiteText">The economy may be slowing but innovation isn't. Agile and innovative startups often easily adapt to changing market conditions and continue finding new opportunities for growth. Recessions can even provide new opportunities for startups as established companies struggle and consumers look for more affordable alternatives. Founders need your funding more now than ever to continue innovating and pushing their startups to become the next big thing.</div>
       </div>    
       <!-- whiteBox -->
+      <div class="emptySpace"></div>
       <div class=""> 
         <div class="blueTitle">
           Our Speakers
@@ -157,63 +162,95 @@
           </div>
         </div>
       </div>
+      <div class="emptySpace"></div>
       <div class="">
         <div class="blueTitle">
           Accelerators
         </div>
         <div class="flexRow flexCenter flexWrap">
-          <div class="flexColumn partnerLogo">
-            <a href="https://fintechcadence.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/fintechCadence.png" /></a>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://fintechcadence.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/fintechCadence.png" /></a>
+            </div>
           </div>
-          <div class="flexColumn partnerLogo">
-            <a href="https://www.nextcanada.com/next-36/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/next36.png" /></a>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://www.nextcanada.com/next-36/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/next36.png" /></a>
+            </div>
           </div>
-          <div class="flexColumn partnerLogo">
-            <a href="https://www.nextcanada.com/next-ai/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/nextai.png" /></a>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://www.nextcanada.com/next-ai/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/nextai.png" /></a>
+            </div>
           </div>
-          <div class="flexColumn partnerLogo">
-            <a href="https://www.nextcanada.com/next-founders/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/nextfounders.png" /></a>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://www.nextcanada.com/next-founders/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/nextfounders.png" /></a>
+            </div>
           </div>
-          <div class="flexColumn partnerLogo">
-            <a href="https://www.antler.co" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/antler.png" /></a>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://www.antler.co" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/antler.png" /></a>
+            </div>
           </div>
-          <div class="flexColumn partnerLogo">
-            <a href="https://creativedestructionlab.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/cdl.png" /></a>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://creativedestructionlab.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/cdl.png" /></a>
+            </div>
           </div>
-          <div class="flexColumn partnerLogo">
-            <a href="https://ams.uottawa.ca/accelerator-laboratory-homepage/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/lalonde.png" /></a>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://ams.uottawa.ca/accelerator-laboratory-homepage/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/lalonde.png" /></a>
+            </div>
           </div>
-          <div class="flexColumn partnerLogo">
-            <a href="https://www.jumboventures.org" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/jumbo.png" /></a>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://www.jumboventures.org" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/jumbo.png" /></a>
+            </div>
           </div>
-          <div class="flexColumn partnerLogo">
-            <a href="https://www.bearcatventures.org" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/bearcat.png" /></a>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://www.bearcatventures.org" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/bearcat.png" /></a>
+            </div>
           </div>
-          <div class="flexColumn partnerLogo">
-            <a href="https://www.sky-ventures.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/skyventures.png" /></a>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://www.sky-ventures.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/skyventures.png" /></a>
+            </div>
           </div>
-          <div class="flexColumn partnerLogo">
-            <a href="https://www.northeastern.edu/idea/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/qidea.png" /></a>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://www.northeastern.edu/idea/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/qidea.png" /></a>
+            </div>
           </div>
-          <div class="flexColumn partnerLogo">
-            <a href="https://cpsse.psu.edu/club/happy-valley-vc" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/pennstate.png" /></a>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://cpsse.psu.edu/club/happy-valley-vc" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/pennstate.png" /></a>
+            </div>
           </div>
-          <div class="flexColumn partnerLogo">
-            <a href="https://www.linkedin.com/company/venture-capital-club-oklahoma/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/vcc.png" /></a>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://www.linkedin.com/company/venture-capital-club-oklahoma/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/vcc.png" /></a>
+            </div>
           </div>
-          <div class="flexColumn partnerLogo">
-            <a href="https://www.gatorventurecapital.org" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/gator.png" /></a>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://www.gatorventurecapital.org" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/gator.png" /></a>
+            </div>
           </div>
-          <div class="flexColumn partnerLogo">
-            <a href="https://www.collegeventuresnetwork.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/cnv.png" /></a>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://www.collegeventuresnetwork.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/cnv.png" /></a>
+            </div>
           </div>
-          <div class="flexColumn partnerLogo">
-            <a href="https://holtxchange.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/xchange.png" /></a>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://holtxchange.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/xchange.png" /></a>
+            </div>
           </div>
-
-
         </div>
         <div class="smallTitle">...and many more to come</div>
+        <div class="emptySpace"></div>
       </div>
     </div>
   </div>
