small text edit

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="blueTitle">
           No Sleep for Founders
         </div>
-        <div class="whiteText">The economy may be slowing but innovation isn't. Agile and innovative startups often easily adapt to changing market conditions and continue finding new opportunities for growth. Recessions can even provide new opportunities for startups as established companies struggle and consumers look for more affordable alternatives. Founders need your funding more now than ever to continue innovating and pushing their startups to become the next big thing.</div>
+        <div class="whiteText">The economy may be slowing but innovation isn't: no matter what happens, founders will continue to innovate and transform the world. Agile and innovative startups often easily adapt to changing market conditions and continue finding new opportunities for growth. Recessions can even provide new opportunities for startups as established companies struggle and consumers look for more affordable alternatives. Founders need your funding more now than ever to continue innovating and pushing their startups to become the next big thing.</div>
       </div>    
       <!-- whiteBox -->
       <div class="emptySpace"></div>
