--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
       <!-- <div class="emptySpace"></div> -->
       <div class="flexColumn third animationCard">
         <img height="50" width="50" src="./assets/world.png" />
-        <div class="whiteText">Discover hundreds of startups accross the world</div>
+        <div class="whiteText">Discover hundreds of startups world-wide</div>
       </div>
       <div class="flexColumn third animationCard">
         <img height="50" width="50" src="./assets/fast.png" />
-        <div class="whiteText">Quickly find the best startups that fits your interests</div>
+        <div class="whiteText">Quickly find startups that fits your interests</div>
       </div>
       <div class="flexColumn third animationCard">
         <img height="50" width="50" src="./assets/database.png" />
@@ -101,15 +101,15 @@
       </div>
       <div class="flexColumn third animationCard">
         <img height="50" width="50" src="./assets/group.png" />
-        <div class="whiteText">Invest among the best angels and mentors</div>
+        <div class="whiteText">Invest among angels and experts</div>
       </div>
       <div class="flexColumn third animationCard">
         <img height="50" width="50" src="./assets/fireplace.png" />
-        <div class="whiteText">Get warm intros with the best founders world-wide</div>
+        <div class="whiteText">Get warm intros with startup founders</div>
       </div>
       <div class="flexColumn third animationCard">
         <img height="50" width="50" src="./assets/verified.png" />
-        <div class="whiteText">Events with world-class speakers and experts</div>
+        <div class="whiteText">Events with world-class speakers and mentors</div>
       </div>
       <a href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank" class="callButton buttonMargin">JOIN NOW</a>
 
