--- a/index.html
+++ b/index.html
@@ -243,11 +243,11 @@
               <a href="https://www.collegeventuresnetwork.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/cnv.png" /></a>
             </div>
           </div>
-          <div class="aroundPartner">
+          <!-- <div class="aroundPartner">
             <div class="flexColumn partnerLogo">
               <a href="https://holtxchange.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/xchange.png" /></a>
             </div>
-          </div>
+          </div> -->
         </div>
         <div class="smallTitle">...and many more to come</div>
         <div class="emptySpace"></div>
