--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<div class="header">
       <a href="https://andrewciotto.github.io"><img class="logoTitle" src="./assets/logoText-white.png" /></a>
   		<p class="headerTitle">
-  			Invest in the builders of tomorrow
+  			Connect with the builders of tomorrow
   		</p> 
   		<!-- <p><a class="btn btn-lg btn-primary" href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank" style="background: #5800FF">Apply now</a></p> -->
 	</div>
